test/files/neg/t5572.check
t5572.scala:16: error: type mismatch;
 found   : B
 required: A
    Z.transf(a, b) match {
             ^
t5572.scala:18: error: type mismatch;
 found   : A
 required: B
        run(sth, b)
                 ^
two errors found
